移动注册类回content；移动registrate类到api；移动并重命名了部分生物施法相关类；重写了巫师词条的部分方法。